--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
