--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.1.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
