--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emailjs-com": "^3.1.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
+    "vue-hotjar": "^1.4.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
