--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "emailjs-com": "^3.1.0",
+    "firebase": "^8.6.8",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
     "vue-hotjar": "^1.4.0",
