--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
+    "bootstrap": "^5.0.2",
+    "core-js": "^3.15.1",
     "emailjs-com": "^3.1.0",
     "firebase": "^8.6.8",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
-    "vue-hotjar": "^1.4.0",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
